<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AdsStatus" Id="{24a70ceb-f6b0-41fe-9728-05d43dfc6da0}">
    <Declaration><![CDATA[{attribute 'pack_mode' = '1'}
TYPE ST_AdsStatus :
STRUCT
	bBusy	: BOOL;
	bError	: BOOL;
	nError 	: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>