<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AnyType" Id="{2f218d5b-ad10-4c5f-9eba-9f839d114d28}">
    <Declaration><![CDATA[{attribute 'pack_mode' = '1'}
TYPE ST_AnyType :
STRUCT
	pValue : PVOID;
	nSize  : DINT;
	TypeClass : __SYSTEM.TYPE_CLASS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>